Thu Sep 19 17:51:53 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h.in src/tds/token.c:
	- save version of product (Sybase/MS and version)

Wed Sep 18 10:25:59 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c: (from Andrea Spinelli)
	- support autocommit option on mssql
	- return error/info information to client
	- support SQLTransact
	

Wed Sep 18 10:25:59 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* applied patch #610810 from Ross Simpson (slightly modified)

Tue Sep 17 18:03:56 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h.in include/tdsconvert.h src/dblib/bcp.c
	  src/dblib/dblib.c src/dblib/unittests/t0016.in src/tds/convert.c:
	- Merge Bill's patch #610589 onto HEAD.
	- The modifications to dbconvert() for SYB[VAR]CHAR to SYB[VAR]CHAR
	  conversions were incorrect, resulting in different behavior from
	  Sybase's libraries and failure of dblib unit test t0019.  I removed
	  these changes.
	- Cleaned up a few warnings.

Tue Sep 17 13:50:58 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/Makefile.am src/tds/token.c src/tds/util.c:
	- Don't pass NULL pointers to fflush(), fclose(), or realloc().
	  From Insure++ report sent in by Magnus.Ahl@infogate.se

Tue Sep 17 13:31:47 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/Makefile.am:
	- Add explicit shared library version number.
	* include/tds.h.in src/dblib/Makefile.am src/dblib/dblib.c
	  src/tds/Makefile.am src/tds/login.c src/tds/mem.c:
	- Change tds_set_packet to take packet_size as an int instead
	  of a short.  Adjust TDSLOGIN.block_size to match.  Use these
	  to fix possible integer overflow in DBSETLPACKET().

Tue Sep 17 12:47:08 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/unittests/common.c src/ctlib/unittests/t0001.c
	  src/ctlib/unittests/t0003.c src/ctlib/unittests/t0004.c
	  src/ctlib/unittests/t0006.c src/ctlib/unittests/t0007.c